# pygfycat

./: .coveragerc  .pre-commit-config.yaml  Taskfile.yml  pyproject.toml
.github/workflows/: main.yml  make-docs.yml  static.yml
docs/gpycat/: core.html  index.html  session.html
docs/gpycat/models/: album.html  gfy_item.html  index.html
gfycat/: __init__.py  core.py  hooks.py
gfycat/models/: __init__.py
gpycat/: core.py
gpycat/models/: gfy_item.py
scripts/: get_secret_string.py  make_dotenv.py  make_dotenvrc.py
scripts/templates/: .env.mako
tests/: test_auth.py  test_core.py  test_gfycat.py  test_gpycat.py
